--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codepro</title>
+    <title>Codepro Company</title>
 
 
     <script src="https://kit.fontawesome.com/33b5586d93.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="kawatstyle.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -538,7 +538,7 @@
     <script src="assets/js/scrollfade-0.1.js"></script>
 
     <!-- src -->
-    <script src="kawat.js"></script>
+    <script src="java.js"></script>
 </body>
 
-</html>
+</html> 
